tests/derive_compile_fail/positional_with_rename_all.stderr
error: `positional` cannot be combined with `rename_all`
 --> tests/derive_compile_fail/positional_with_rename_all.rs:5:8
  |
5 | struct Bad(i64, String);
  |        ^^^
